# pkg/controlplane/register_handlers.go
@@ -45,6 +45,11 @@ func RegisterGatewayHTTPHandlers(ctx context.Context, gwmux *runtime.ServeMux, g
 		log.Fatalf("failed to register gateway: %v", err)
 	}
 
+	// Register OrganisationService handler
+	if err := pb.RegisterOrganisationServiceHandlerFromEndpoint(ctx, gwmux, grpcAddress, opts); err != nil {
+		log.Fatalf("failed to register gateway: %v", err)
+	}
+
 }
 
 func RegisterGRPCServices(s *Server) {
@@ -56,4 +61,7 @@ func RegisterGRPCServices(s *Server) {
 
 	// Register the Login service
 	pb.RegisterLogInServiceServer(s.grpcServer, s)
+
+	// Register the Organisation service
+	pb.RegisterOrganisationServiceServer(s.grpcServer, s)
 }
