# pkg/generated/openapi/mediator/v1/mediator.swagger.json
@@ -31,6 +31,9 @@
     },
     {
       "name": "BranchProtectionService"
+    },
+    {
+      "name": "OrganisationService"
     }
   ],
   "consumes": [
@@ -332,6 +335,38 @@
         ]
       }
     },
+    "/api/v1/organisation": {
+      "post": {
+        "operationId": "OrganisationService_CreateOrganisation",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CreateOrganisationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1CreateOrganisationRequest"
+            }
+          }
+        ],
+        "tags": [
+          "OrganisationService"
+        ]
+      }
+    },
     "/api/v1/secrets": {
       "get": {
         "operationId": "SecretsService_GetSecrets",
@@ -494,6 +529,40 @@
       "properties": {
         "status": {
           "type": "string"
+        }
+      }
+    },
+    "v1CreateOrganisationRequest": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "company": {
+          "type": "string"
+        }
+      }
+    },
+    "v1CreateOrganisationResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        },
+        "company": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
